compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_nosize3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 65
expression: "case <<1>> { <<_:bytes, _:bits>> -> 1 }"
---
----- SOURCE CODE
case <<1>> { <<_:bytes, _:bits>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:18
  │
1 │ case <<1>> { <<_:bytes, _:bits>> -> 1 }
  │                  ^^^^^ This segment has no size

Hint: Bit array segments without a size are only allowed at the end of a
bin pattern.
See: https://tour.rakun.run/data-types/bit-arrays/
